# glide

./: .gitignore  Cargo.toml  Justfile  build.rs  bundle.sh  deny.toml  setup.sh
.github/workflows/: ci.yml  weekly.yml
benchmark/: Cargo.toml
benchmark/src/: check_models.rs  cli.rs  lib.rs  main.rs  prompt_eval.rs  report.rs  runner.rs  tests.rs  types.rs
benchmark/tests/: benchmark_cli.rs
glide-tools/: Cargo.toml
glide-tools/src/: lib.rs  profile.rs
macos/GlideAppleHelper/: FoundationModels.swift  Main.swift  Serve.swift  Speech.swift  Support.swift  Types.swift
src/: app.rs  apple_helper.rs  audio.rs  benchmark.rs  benchmark_support.rs  config.rs  engines.rs  hotkey.rs  lib.rs  logging.rs  main.rs  model_catalog.rs  pipeline.rs  platform.rs  profile.rs  startup.rs  state.rs  text.rs  trace.rs  ui.rs
src/app/: actions.rs  startup.rs  state.rs  trace.rs
src/apple_helper/: operations.rs  transport.rs
src/config/: app.rs  audio.rs  hotkey.rs  mod.rs  models.rs  overlay.rs  paste.rs  providers.rs  storage.rs  tests.rs
src/engines/: apple_bridge.rs  apple_helper.rs  llm.rs  local_models.rs  model_assets.rs  model_catalog.rs  net.rs  prewarm.rs  stt.rs
src/llm/: apple.rs  mod.rs  util.rs
src/local_models/: apple.rs  mod.rs  parakeet.rs
src/model_catalog/: catalog.rs
src/overlay/: mod.rs
src/platform/: input.rs  macos.rs  mod.rs  paste.rs  permissions.rs
src/stt/: apple.rs  mod.rs  openai.rs  parakeet.rs
src/ui/: about.rs  builders.rs  config_recovery.rs  helpers.rs  menu.rs  mod.rs  onboarding.rs  overlay.rs  panes.rs  persistence.rs  (+3 more)
(+60 files in other folders)
