[package]
name = "glide-benchmark"
version = "0.1.0-beta.1"
edition = "2024"
description = "Benchmark CLI for Glide"

[[bin]]
name = "glide-bench"
path = "src/main.rs"

[dependencies]
glide = { path = "..", features = ["benchmark-support"] }
anyhow = "1"
hound = "3"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
